--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -170,6 +170,29 @@ div.img_relative.labtop{
     z-index: 5000;
   }
 
+  .portfolio_images{
+    width: 100vw;
+    margin: auto;
+    overflow-x: hidden;
+  }
+
+  .container-fluid{
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .row{
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  /*.container_carousel{
+    width: 120%;
+    margin-left: -10%;
+    overflow: hidden;
+    clip: rect(10%, 100vw, 100vh, 10%);
+  }*/
+
 
 
 
