--- a/stylesheet/contact.css
+++ b/stylesheet/contact.css
@@ -1,13 +1,12 @@
 @font-face{
   font-family: pacifico;
-  src: url(Pacifico-Regular.ttf)
+  src: url(Pacifico-Regular.ttf);
 }
 
 .email{
     color: white;
     font-family: pacifico;
     text-transform: lowercase;
-    /*text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #f6ff00, 0 0 30px #f6ff00, 0 0 40px #f6ff00, 0 0 50px #f6ff00, 0 0 75px #f6ff00;*/
   }
 
 .container_contacts{
@@ -19,6 +18,7 @@
   width: 100%;
   height: 100px;
   margin-top: -15%;
+  zoom: 75%;
 }
 
 
@@ -37,8 +37,6 @@ h4 > a:active{
   float: left;
   padding: 20px 50px 20px 50px;
   opacity: 1;
-
-  /*font-variant: small-caps;*/
   text-transform: lowercase;
 }
 
@@ -49,13 +47,8 @@ h4.email a{
 h4 a:hover,
 h4:hover{
   color: white;
-  -webkit-text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #f6ff00, 0 0 30px #f6ff00, 0 0 40px #f6ff00, 0 0 50px #f6ff00, 0 0 75px #f6ff00;
-  -moz-text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #f6ff00, 0 0 30px #f6ff00, 0 0 40px #f6ff00, 0 0 50px #f6ff00, 0 0 75px #f6ff00;
-  -ms-text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #f6ff00, 0 0 30px #f6ff00, 0 0 40px #f6ff00, 0 0 50px #f6ff00, 0 0 75px #f6ff00;
-  -o-text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #f6ff00, 0 0 30px #f6ff00, 0 0 40px #f6ff00, 0 0 50px #f6ff00, 0 0 75px #f6ff00;
   text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #f6ff00, 0 0 30px #f6ff00, 0 0 40px #f6ff00, 0 0 50px #f6ff00, 0 0 75px #f6ff00;
   z-index: 1000;
-  /*transform: scale(1.2);*/
 }
 
 .noflicker{
@@ -72,41 +65,20 @@ h4:hover{
 .flicker >a:link,
 .flicker >a:active{
   color: none;
-  /*opacity: 1;*/
   -webkit-text-shadow: 0 0 5px #fffbdb, 0 0 10px #fff056, 0 0 15px #fff056, 0 0 20px #fff056, 0 0 30px #fff056, 0 0 40px #fff056;
   -moz-text-shadow: 0 0 5px #fffbdb, 0 0 10px #fff056, 0 0 15px #fff056, 0 0 20px #fff056, 0 0 30px #fff056, 0 0 40px #fff056;
   -ms-text-shadow: 0 0 5px #fffbdb, 0 0 10px #fff056, 0 0 15px #fff056, 0 0 20px #fff056, 0 0 30px #fff056, 0 0 40px #fff056;
   -o-text-shadow: 0 0 5px #fffbdb, 0 0 10px #fff056, 0 0 15px #fff056, 0 0 20px #fff056, 0 0 30px #fff056, 0 0 40px #fff056;
   text-shadow: 0 0 5px #fffbdb, 0 0 10px #fff056, 0 0 15px #fff056, 0 0 20px #fff056, 0 0 30px #fff056, 0 0 40px #fff056;
-  /*transform: scale(1.2);*/
 }
 
 h4.linkedin a:hover {
-    /*color: yellow;*/
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #f6ff00, 0 0 30px #f6ff00, 0 0 40px #f6ff00, 0 0 50px #f6ff00, 0 0 75px #f6ff00;
     transition: all .1s ease-in-out;
-
 }
 
-h4.email a:hover {
-    /*color: #ff6000;*/
-    /*background: transparent;*/
-    transition: all .1s ease-in-out;
-
-}
-
-h4.facebook a:hover {
-    /*color: #00ffba;*/
-    /*background: transparent;*/
-    transition: all .1s ease-in-out;
-
-
-}
-
+h4.email a:hover,
+h4.facebook a:hover,
 h4.instagram a:hover {
-    /*color: salmon;*/
-    /*background: transparent;*/
     transition: all .1s ease-in-out;
-
-
 }
