--- a/stylesheet/marbWhite.css
+++ b/stylesheet/marbWhite.css
@@ -1,56 +1,3 @@
-/*@import '../_sass/_reset.scss';
-@import '../_sass/_flipButton.scss';*/
-
-
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-  html, body, div, span, applet, object, iframe,
-  h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-  a, abbr, acronym, address, big, cite, code,
-  del, dfn, em, img, ins, kbd, q, s, samp,
-  small, strike, strong, sub, sup, tt, var,
-  b, u, i, center,
-  dl, dt, dd, ol, ul, li,
-  fieldset, form, label, legend,
-  table, caption, tbody, tfoot, thead, tr, th, td,
-  article, aside, canvas, details, embed,
-  figure, figcaption, footer, header, hgroup,
-  menu, nav, output, ruby, section, summary,
-  time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-  }
-  /* HTML5 display-role reset for older browsers */
-  article, aside, details, figcaption, figure,
-  footer, header, hgroup, menu, nav, section {
-    display: block;
-  }
-  body {
-    line-height: 1;
-  }
-  ol, ul {
-    list-style: none;
-  }
-  blockquote, q {
-    quotes: none;
-  }
-  blockquote:before, blockquote:after,
-  q:before, q:after {
-    content: '';
-    content: none;
-  }
-  table {
-    border-collapse: collapse;
-    border-spacing: 0;
-  }
-
-/*CSS EDWIN BELOW*/
 .img_img{
   width: 100vw;
 }
@@ -63,20 +10,20 @@
   z-index: 1000;
 }
 
+
 .container_two{
   margin: auto;
   position: relative;
-  zoom: 90%;
 }
+
 
 h1 {
   font-family: robotoSlab;
-  font-size: 9vw;
+  font-size: 6vw;
   font-weight: bold;
   color: #808285;
   letter-spacing: .07em;
   text-align: center;
-  /*text-shadow: 0px 0px 50px grey;*/
   justify-content: center;
 }
 
@@ -86,7 +33,6 @@ h1 a:link,
 h1 a:active{
   text-decoration: none;
   color: #808285;
-  /*opacity: .9;*/
 }
 
 h1 a:hover,
@@ -119,8 +65,8 @@ hr {
   opacity: .6;
   box-shadow: 2px 0px 20px #808285;
   margin-top: 6%;
-  margin-bottom: 15%;
-  justify-content: center
+  margin-bottom: 12%;
+  justify-content: center;
 }
 
 .container_three{
@@ -129,9 +75,15 @@ hr {
   flex-direction: row;
   justify-content: space-around;
   vertical-align: middle;
-  width: 100%;
-  height: 100px;
-  margin: -10%;
+  height: 60px;
+}
+
+h2.left.button-row{
+  margin-left: -11%;
+}
+
+h2.right_right.button-row{
+  margin-right: 11%;
 }
 
 h2.button-row {
@@ -140,10 +92,8 @@ h2.button-row {
   perspective: 1000px;
   font-family: 'Oswald', sans-serif;
   letter-spacing: .15em;
-  font-size: 1vw;
-  padding: 3vw 3vw 3vw 3vw;
+  font-size: .75vw;
   display: block;
-
 }
 
 h2.button-row > a {
@@ -173,7 +123,7 @@ h2.button-row > a::before, h2.button-row > a::after {
   margin: 0;
   padding: 0;
   opacity: 1;
-  width: 10vw;
+  width: 7vw;
   height: 50px;
   border: 5px solid #808285;
   box-sizing: border-box;
