--- a/stylesheet/nut.css
+++ b/stylesheet/nut.css
@@ -24,7 +24,7 @@
 .img_plant{
   zoom: 23%;
   bottom: -5%;
-  left: 18%;
+  left: 19.5%;
 }
 
 .img_labtop{
@@ -35,12 +35,8 @@
 
 .resume_pdf{
   text-align: right;
-  /*zoom: 80%;*/
   width: 80%;
   height: auto;
-  /*-ms-transform: rotate(.5deg); /* IE 9 */*/
-  /*-webkit-transform: rotate(.5deg); /* Chrome, Safari, Opera*/*/
-  /*transform: rotate(.5deg);*/
   box-shadow: 6px 6px 6px black;
   -webkit-transform:scale(1); /* Safari and Chrome */
   -moz-transform:scale(1); /* Firefox */
@@ -49,6 +45,10 @@
    transform:scale(1);
    transition: transform .3s;
   transition-timing-function: ease-in-out;
+}
+
+div.img_relative.labtop{
+  height: 100vh;
 }
 
 img.resume_pdf:hover{
@@ -63,7 +63,7 @@ img.resume_pdf:hover{
 
 .row.nut{
   display: flex;
-margin: auto;
+  margin: auto;
   vertical-align: middle;
 }
 
