--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -5,12 +5,24 @@
 /*labtop*/
 @media (max-width:2480px){
 
+  h1 a:hover,
+  h1:hover{
+    font-size: 8vw;
+    color: white;
+    text-shadow: 0px 0px 10px grey;
+    transition: text-shadow 0.25s ease;
+    transition: color .5s ease;
+  }
+
+  h1 {
+    font-size: 8vw;
+  }
+
   hr {
     height: 3.5px;
     box-shadow: 2px 0px 20px #808285;
     background-color: #808285;
     opacity: .9;
-
   }
 
   h2.button-row {
@@ -20,9 +32,9 @@
   }
 
   h2.button-row > a::before, h2.button-row > a::after {
-    width: 7.5vw;
+    width: 10vw;
     height: 35px;
-    border: 4px solid inherit;
+    border: 2px solid inherit;
   }
 
   h2.button-row > a::before {
@@ -83,7 +95,6 @@
     zoom: 30%;
     bottom: -20%;
     left: -5%;
-    /*transform: rotate(-35deg);*/
     z-index: 5000;
   }
 
@@ -128,6 +139,7 @@
 
   h1 a:hover,
   h1:hover{
+    font-size: 9vw;
     color: white;
     text-shadow: 0px 0px 10px grey;
     transition: text-shadow 0.25s ease;
@@ -135,54 +147,25 @@
   }
 
   hr {
-    box-shadow: 2px 0px 10px #808285;
+    height: 2.5px;
+    box-shadow: 0px 2px 5px #808285;
+    background-color: #808285;
   }
 
   h1 {
-    font-size: 12vw;
+    font-size: 9vw;
   }
 
   h2.button-row {
-    font-size: 1.75vw;
+    letter-spacing: .15em;
+    font-size: 1.25vw;
+    display: block;
   }
 
   h2.button-row > a::before, h2.button-row > a::after {
-    width: 13vw;
-    height: 40px;
-  }
-
-  h2.button-row > a {
-    -webkit-transform: translateZ(-20px);
-    -moz-transform: translateZ(-20px);
-    -ms-transform: translateZ(-20px);
-    -o-transform: translateZ(-20px);
-    transform: translateZ(-20px);
-  }
-
-  h2.button-row > a::before {
-    background-color: #808285;
-    color: #fff;
-    -webkit-transform: rotateY(0deg) translateZ(20px);
-    -moz-transform: rotateY(0deg) translateZ(20px);
-    -ms-transform: rotateY(0deg) translateZ(20px);
-    -o-transform: rotateY(0deg) translateZ(20px);
-    transform: rotateY(0deg) translateZ(20px);
-  }
-
-  h2.button-row > a::after {
-    background-color: #fff;
-    -webkit-transform: rotateX(90deg) translateZ(20px);
-    -moz-transform: rotateX(90deg) translateZ(20px);
-    -ms-transform: rotateX(90deg) translateZ(20px);
-    -o-transform: rotateX(90deg) translateZ(20px);
-    transform: rotateX(90deg) translateZ(20px);
-  }
-  h2.button-row > a:hover {
-    -webkit-transform: translateZ(-20px) translateY(20px) rotateX(-90deg);
-    -moz-transform: translateZ(-20px) translateY(20px) rotateX(-90deg);
-    -ms-transform: translateZ(-20px) translateY(20px) rotateX(-90deg);
-    -o-transform: translateZ(20px) translateY(20px) rotateX(-90deg);
-    transform: translateZ(-20px) translateY(20px) rotateX(-90deg);
+    width: 11vw;
+    height: 35px;
+    border: 4px solid inherit;
   }
 
   div.img_relative.labtop{
@@ -218,9 +201,15 @@
   }
 
   .portfolio_images{
-    width: 100vw;
-    margin: auto;
-    overflow-x: hidden;
+    margin-top: 5%;
+  }
+
+  .carousel-inner{
+    height: 100vh;
+   margin-left: 7.25%;
+   overflow: hidden;
+   width: 100%;
+   margin-left: 0;
   }
 
   .container-fluid{
@@ -255,6 +244,23 @@
     letter-spacing: .3;
     font-weight: bold;
     font-size: 4vw;
+  }
+
+  .container_one.contactpage{
+    overflow: hidden;
+  }
+
+  .img_contact{
+    zoom: 150%;
+  }
+
+  .container_contacts{
+    zoom: 104%;
+    width: 105%;
+  }
+
+  h4.email{
+    padding-top: 2%;
   }
 
 }
@@ -352,7 +358,6 @@
   .container_two.contact{
     width: 100%;
     margin-left: 10%;
-
   }
 
   #carousel{
