--- a/stylesheet/marbWhite.css
+++ b/stylesheet/marbWhite.css
@@ -53,7 +53,7 @@
   animation: cloud3 500s linear;
 }
 
-.img_introcloud4{
+.img_introcloud1{
   position: absolute;
   z-index: 0;
   opacity: 1;
@@ -61,7 +61,7 @@
   left:;
   width: 30vw;
   height: auto;
-  animation: cloud4 6000s linear;
+  animation: cloud1 6000s linear;
   transition: ease;
 }
 
@@ -83,7 +83,7 @@
   }
 }
 
-@keyframes cloud4{
+@keyframes cloud1{
   0% {
     left: 5%;
   }
@@ -123,7 +123,7 @@ h1:hover{
   text-shadow: 0 0 50px white;
   /*background-image: url(../images/fractal.jpg);*/
   background-size: 40vw 40vh;
-  -webkit-background-clip: text;
+  /*-webkit-background-clip: text;*/
   background-clip: text;
   -webkit-text-shadow: 0px 0px 50px white;
   -moz-text-shadow: 0px 0px 50px white;
