--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -14,16 +14,31 @@
     transition: color .5s ease;
   }
 
+  .img_introcloud1{
+    margin-top: 3%;
+    margin-left: -6%;
+  }
+
+  .img_introcloud2{
+    top: 0%;
+  }
+
   h1 {
     font-size: 8vw;
   }
 
+
+
   hr {
-    height: 3.5px;
+    height: 2px;
     box-shadow: none;
-    background-color: #808285;
+    background-color: white;
     opacity: .9;
   }
+
+
+
+
 
   h2.button-row {
     letter-spacing: .15em;
@@ -34,7 +49,7 @@
   h2.button-row > a::before, h2.button-row > a::after {
     width: 10vw;
     height: 35px;
-    border: 2px solid inherit;
+    border: .5px solid inherit;
   }
 
   h2.button-row > a::before {
@@ -140,16 +155,10 @@
   h1 a:hover,
   h1:hover{
     font-size: 9vw;
-    color: white;
-    text-shadow: 0px 0px 10px grey;
-    transition: text-shadow 0.25s ease;
-    transition: color .5s ease;
   }
 
   hr {
     height: 2.5px;
-    box-shadow: 0px 2px 5px #808285;
-    background-color: #808285;
   }
 
   h1 {
@@ -165,7 +174,6 @@
   h2.button-row > a::before, h2.button-row > a::after {
     width: 11vw;
     height: 35px;
-    border: 4px solid inherit;
   }
 
   div.img_relative.labtop{
