--- a/stylesheet/marbWhite.css
+++ b/stylesheet/marbWhite.css
@@ -23,13 +23,17 @@
   width: 100vw;
   height: auto;
 }
+
 .img_introcloud1{
   position: absolute;
   z-index: 0;
   opacity: 1;
-  top: 0%;
-  width: 100vw;
-  height: 100vh;
+  top: 35%;
+  left:0;
+  width: 30vw;
+  height: auto;
+  animation: cloud1 1000s linear;
+  transition: ease;
 }
 
 .img_introcloud2{
@@ -53,16 +57,24 @@
   animation: cloud3 500s linear;
 }
 
-.img_introcloud1{
+.img_introcloud4{
   position: absolute;
   z-index: 0;
   opacity: 1;
-  top: 35%;
-  left:;
-  width: 30vw;
+  top: 25%;
+  width: 50vw;
   height: auto;
-  animation: cloud1 6000s linear;
-  transition: ease;
+  animation: cloud4 200s linear;
+}
+
+
+@keyframes cloud1{
+  0% {
+    left: 0%;
+  }
+  100% {
+    left: 100vw;
+  }
 }
 
 @keyframes cloud2{
@@ -83,22 +95,28 @@
   }
 }
 
-@keyframes cloud1{
+@keyframes cloud4{
   0% {
-    left: 5%;
+    left: 40vw;
   }
   100% {
-    left: 100vw;
+    left: 120vw;
   }
 }
+
 
 
 h1 {
   font-family: robotoSlab;
   font-size: 6vw;
   font-weight: bold;
-  text-shadow: 0px 0px 50px #3a75bb;
-  color: white;
+  color: transparent;
+  text-shadow: none;
+  opacity: 1;
+  background-image: url(../images/fractal.jpg);
+  background-size: 40vw 40vh;
+  -webkit-background-clip: text;
+  background-clip: text;
   letter-spacing: .07em;
   text-align: center;
   justify-content: center;
@@ -108,38 +126,47 @@ h1 a,
 h1 a:visited,
 h1 a:link,
 h1 a:active{
+  /*color: white;*/
+  color: transparent;
+  text-shadow: none;
+  opacity: 1;
+  background-image: url(../images/fractal.jpg);
+  background-size: 40vw 40vh;
+  -webkit-background-clip: text;
+  background-clip: text;
   text-decoration: none;
-  color: white;
-  -webkit-transition: text-shadow 1s ease;
-  -moz-transition: text-shadow 1s ease;
-  -ms-transition: text-shadow 1s ease;
-  -o-transition: text-shadow 1s ease;
-  transition: text-shadow 1s ease;
+  /*text-shadow: 0px 0px 50px #3a75bb;*/
+  -webkit-transition: background-image 1s ease;
+  -moz-transition: background-image 1s ease;
+  -ms-transition: background-image 1s ease;
+  -o-transition: background-image 1s ease;
+  transition: background-image 1s ease;
 }
 
 h1 a:hover,
 h1:hover{
-  color: white;
-  text-shadow: 0 0 50px white;
-  /*background-image: url(../images/fractal.jpg);*/
+  color: transparent;
+  text-shadow: none;
+  opacity: 1;
+  background-image: url(../images/fractal2.jpg);
   background-size: 40vw 40vh;
-  /*-webkit-background-clip: text;*/
+  -webkit-background-clip: text;
   background-clip: text;
-  -webkit-text-shadow: 0px 0px 50px white;
+  /*-webkit-text-shadow: 0px 0px 50px white;
   -moz-text-shadow: 0px 0px 50px white;
   -ms-text-shadow: 0px 0px 50px white;
   -o-text-shadow: 0px 0px 50px white;
-  text-shadow: 0px 0px 50px white;
+  text-shadow: 0px 0px 50px white;*/
   -webkit-transition: text-shadow 2s ease-in;
   -moz-transition: text-shadow 2s ease-in;
   -ms-transition: text-shadow 2s ease-in;
   -o-transition: text-shadow 2s ease-in;
   transition: text-shadow 2s ease;
-  -webkit-transition: color 2s ease;
-  -moz-transition: color 2s ease;
-  -ms-transition: color 2s ease;
-  -o-transition: color 2s ease;
-  transition: color 2s ease;
+  -webkit-transition: background-image 2s ease;
+  -moz-transition: background-image 2s ease;
+  -ms-transition: background-image 2s ease;
+  -o-transition: background-image 2s ease;
+  transition: background-image 2s ease;
   z-index: 1000;
 }
 
