--- a/stylesheet/marbWhite.css
+++ b/stylesheet/marbWhite.css
@@ -130,8 +130,8 @@ h1 a:active{
   color: transparent;
   text-shadow: none;
   opacity: 1;
-  background-image: url(../images/fractal.jpg);
-  background-size: 40vw 40vh;
+  background-image: url(../images/fractal1.jpg);
+  background-size: 35vw 20vh;
   -webkit-background-clip: text;
   background-clip: text;
   text-decoration: none;
@@ -149,7 +149,7 @@ h1:hover{
   text-shadow: none;
   opacity: 1;
   background-image: url(../images/fractal2.jpg);
-  background-size: 40vw 40vh;
+  background-size: 35vw 20vh;
   -webkit-background-clip: text;
   background-clip: text;
   /*-webkit-text-shadow: 0px 0px 50px white;
