--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -7,9 +7,13 @@
 
   h1 a:hover,
   h1:hover{
-    font-size: 8vw;
-    color: white;
-    text-shadow: 0px 0px 10px grey;
+    color: transparent;
+    text-shadow: none;
+    opacity: 1;
+    background-image: url(../images/fractal2.jpg);
+    background-size: 35vw 20vh;
+    -webkit-background-clip: text;
+    background-clip: text;
     transition: text-shadow 0.25s ease;
     transition: color .5s ease;
   }
