--- a/stylesheet/marbWhite.css
+++ b/stylesheet/marbWhite.css
@@ -157,11 +157,11 @@ h1:hover{
   -ms-text-shadow: 0px 0px 50px white;
   -o-text-shadow: 0px 0px 50px white;
   text-shadow: 0px 0px 50px white;*/
-  -webkit-transition: text-shadow 2s ease-in;
+  /*-webkit-transition: text-shadow 2s ease-in;
   -moz-transition: text-shadow 2s ease-in;
   -ms-transition: text-shadow 2s ease-in;
   -o-transition: text-shadow 2s ease-in;
-  transition: text-shadow 2s ease;
+  transition: text-shadow 2s ease;*/
   -webkit-transition: background-image 2s ease;
   -moz-transition: background-image 2s ease;
   -ms-transition: background-image 2s ease;
