--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -14,8 +14,8 @@
     background-size: 35vw 20vh;
     -webkit-background-clip: text;
     background-clip: text;
-    transition: text-shadow 0.25s ease;
-    transition: color .5s ease;
+    transition: background-image 2s ease;
+    z-index: 1000;
   }
 
   .img_introcloud1{
