--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -433,22 +433,24 @@
   }
 
   .img_introcloud1{
-    position: absolute;
+    /*position: absolute;
     z-index: 0;
     opacity: 1;
-    top: 55%;
+    top: 5%;
     left:0;
-    width: 75vw;
+    width: 35vw;
+    zoom: 70%;
     height: auto;
     animation: cloud1 500s linear;
-    transition: ease;
+    transition: ease;*/
+    display: none;
   }
 
   .img_introcloud2{
     position: absolute;
     z-index: 0;
     opacity: 1;
-    top: 3%;
+    top: 20%;
     width: 75vw;
     height: auto;
     animation: cloud2 100s linear;
