--- a/stylesheet/bootstrap-3.3.7-dist/css/bootstrap-theme.css
+++ b/stylesheet/bootstrap-3.3.7-dist/css/bootstrap-theme.css
@@ -515,11 +515,15 @@ fieldset[disabled] .btn-danger.active {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff337ab7', endColorstr='#ff2b669a', GradientType=0);
   background-repeat: repeat-x;
   border-color: #2b669a;
+  margin: auto;
+  padding: 0px;
 }
 .list-group-item.active .badge,
 .list-group-item.active:hover .badge,
 .list-group-item.active:focus .badge {
   text-shadow: none;
+  margin: auto;
+  padding: 0px;
 }
 .panel {
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
