--- a/stylesheet/bootstrap-3.3.7-dist/css/bootstrap.css
+++ b/stylesheet/bootstrap-3.3.7-dist/css/bootstrap.css
@@ -1123,6 +1123,7 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+  padding: 0px;
 }
 .img-rounded {
   border-radius: 6px;
@@ -4945,6 +4946,8 @@ a.badge:focus {
 .nav-pills > .active > a > .badge {
   color: #337ab7;
   background-color: #fff;
+  margin: auto;
+  padding: 0px;
 }
 .list-group-item > .badge {
   float: right;
@@ -5306,6 +5309,8 @@ button.list-group-item {
   color: #fff;
   background-color: #337ab7;
   border-color: #337ab7;
+  margin: auto;
+  padding: 0px;
 }
 .list-group-item.active .list-group-item-heading,
 .list-group-item.active:hover .list-group-item-heading,
@@ -5317,11 +5322,15 @@ button.list-group-item {
 .list-group-item.active:hover .list-group-item-heading > .small,
 .list-group-item.active:focus .list-group-item-heading > .small {
   color: inherit;
+  margin: auto;
+  padding: 0px;
 }
 .list-group-item.active .list-group-item-text,
 .list-group-item.active:hover .list-group-item-text,
 .list-group-item.active:focus .list-group-item-text {
   color: #c7ddef;
+  margin: auto;
+  padding: 0px;
 }
 .list-group-item-success {
   color: #3c763d;
@@ -6244,6 +6253,8 @@ button.close {
 }
 .carousel-inner > .item {
   position: relative;
+  margin: auto;
+  padding: 0px;
   display: none;
   -webkit-transition: .6s ease-in-out left;
        -o-transition: .6s ease-in-out left;
@@ -6252,6 +6263,8 @@ button.close {
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
   line-height: 1;
+  margin: auto;
+  padding: 0px;
 }
 @media all and (transform-3d), (-webkit-transform-3d) {
   .carousel-inner > .item {
@@ -6269,12 +6282,16 @@ button.close {
     left: 0;
     -webkit-transform: translate3d(100%, 0, 0);
             transform: translate3d(100%, 0, 0);
+    margin: auto;
+    padding: 0px;
   }
   .carousel-inner > .item.prev,
   .carousel-inner > .item.active.left {
     left: 0;
     -webkit-transform: translate3d(-100%, 0, 0);
             transform: translate3d(-100%, 0, 0);
+    margin: auto;
+    padding: 0px;
   }
   .carousel-inner > .item.next.left,
   .carousel-inner > .item.prev.right,
@@ -6282,37 +6299,55 @@ button.close {
     left: 0;
     -webkit-transform: translate3d(0, 0, 0);
             transform: translate3d(0, 0, 0);
+    margin: auto;
+    padding: 0px;
   }
 }
 .carousel-inner > .active,
 .carousel-inner > .next,
 .carousel-inner > .prev {
   display: block;
+  margin: auto;
+  padding: 0px;
 }
 .carousel-inner > .active {
   left: 0;
+  margin: auto;
+  padding: 0px;
 }
 .carousel-inner > .next,
 .carousel-inner > .prev {
   position: absolute;
   top: 0;
   width: 100%;
+  margin: auto;
+  padding: 0px;
 }
 .carousel-inner > .next {
   left: 100%;
+  margin: auto;
+  padding: 0px;
 }
 .carousel-inner > .prev {
   left: -100%;
+  margin: auto;
+  padding: 0px;
 }
 .carousel-inner > .next.left,
 .carousel-inner > .prev.right {
   left: 0;
+  margin: auto;
+  padding: 0px;
 }
 .carousel-inner > .active.left {
   left: -100%;
+  margin: auto;
+  padding: 0px;
 }
 .carousel-inner > .active.right {
   left: 100%;
+  margin: auto;
+  padding: 0px;
 }
 .carousel-control {
   position: absolute;
@@ -6327,6 +6362,8 @@ button.close {
   background-color: rgba(0, 0, 0, 0);
   filter: alpha(opacity=50);
   opacity: .5;
+  margin: auto;
+  padding: 0px;
 }
 .carousel-control.left {
   background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, .5) 0%, rgba(0, 0, 0, .0001) 100%);
@@ -6335,6 +6372,8 @@ button.close {
   background-image:         linear-gradient(to right, rgba(0, 0, 0, .5) 0%, rgba(0, 0, 0, .0001) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#80000000', endColorstr='#00000000', GradientType=1);
   background-repeat: repeat-x;
+  margin: auto;
+  padding: 0px;
 }
 .carousel-control.right {
   right: 0;
@@ -6345,6 +6384,8 @@ button.close {
   background-image:         linear-gradient(to right, rgba(0, 0, 0, .0001) 0%, rgba(0, 0, 0, .5) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#80000000', GradientType=1);
   background-repeat: repeat-x;
+  margin: auto;
+  padding: 0px;
 }
 .carousel-control:hover,
 .carousel-control:focus {
@@ -6353,6 +6394,8 @@ button.close {
   filter: alpha(opacity=90);
   outline: 0;
   opacity: .9;
+  margin: auto;
+  padding: 0px;
 }
 .carousel-control .icon-prev,
 .carousel-control .icon-next,
@@ -6363,11 +6406,15 @@ button.close {
   z-index: 5;
   display: inline-block;
   margin-top: -10px;
+  margin: auto;
+  padding: 0px;
 }
 .carousel-control .icon-prev,
 .carousel-control .glyphicon-chevron-left {
   left: 50%;
   margin-left: -10px;
+  margin: auto;
+  padding: 0px;
 }
 .carousel-control .icon-next,
 .carousel-control .glyphicon-chevron-right {
