--- a/stylesheet/carousel.css
+++ b/stylesheet/carousel.css
@@ -1,10 +1,3 @@
-
-
-.woodlayer{
-  position: absolute;
-}
-
-
 .ninetywidth{
   margin: auto;
   width: 100vw;
@@ -22,7 +15,7 @@
   width: 100%;
   margin: auto;
   /*zoom: 105%;*/
-  overflow-x: hidden;
+  /*overflow-x: hidden;*/
 }
 
 .container_relative{
