--- a/stylesheet/app.css
+++ b/stylesheet/app.css
@@ -6,7 +6,7 @@
   opacity: 1;
   text-align: right;
   margin-right: -5%;
-  margin-top: -4%;
+  margin-top: -6%;
   background-color: black;
   float: right;
   padding: 1.5% 8% 1.5% 3%;
@@ -21,7 +21,7 @@
 }
 
 .img_rendez{
-  width: 51vw;
+  width: 100%;
   display: inline;
   position: absolute;
   height: 50vh;
